// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wrapper /> snapshot 1`] = `
<div
  style={
    Object {
      "backgroundColor": "white",
    }
  }
>
  <div
    className="wrapper__inner"
    style={
      Object {
        "maxWidth": "1px",
      }
    }
  >
    <div
      className="unique"
    />
  </div>
</div>
`;

exports[`<Wrapper /> snapshot 2`] = `
<withTheme(StyledComponent)
  background={true}
  uid="xxx"
>
  <div
    className="wrapper__inner"
    style={
      Object {
        "maxWidth": "1px",
      }
    }
  >
    <div
      className="unique"
    />
  </div>
</withTheme(StyledComponent)>
`;

exports[`<Wrapper /> snapshot 3`] = `
<div
  style={
    Object {
      "backgroundColor": "white",
    }
  }
>
  <div
    style={
      Object {
        "backgroundAttachment": "fixed",
        "backgroundColor": "green",
        "height": "100%",
        "left": "0",
        "opacity": "0.8",
        "position": "absolute",
        "top": "0",
        "width": "100%",
      }
    }
  />
  <div
    className="wrapper__inner"
    style={
      Object {
        "maxWidth": "1px",
      }
    }
  >
    <div
      className="unique"
    />
  </div>
</div>
`;
